# CosmoSim

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists-github.txt  CMakeLists.txt  IDUN.md  MANIFEST.in  README-conan2  README.md  TODO  build.sh  conan-clion  conanfile-github.py  conanfile.py  currenttest.sh  idunbuild.sh  pyproject.toml  pytest.py  pythonuser.txt  requirements-build.txt  requirements.txt  run-bach.sh  sampled.sh  setup.py  test.sh  vcpkg.json
.github/workflows/: README.md  arm64.yml  build-all.yml  build-production.yml  comprehensive-test.yml  config.yml  darwin.yml  dist.yml  pypideploy.yml  pypitest-upload.yml  pypitest.yml  python312.yml  regressiontest-windows.yml  regressiontest.yml  release-test.yml  release.yml  test.yml  testpypi.yml  trial-run.yml  wheels-windows.yml  wheels.yml
CosmoSimPy/: Arguments.py  CosmoSim  amplitudes.py  amplitudes2.py  amplitudessim.py  compare.py  datagen.py  datasetgen.py  derivatives.py  libamplitudes.py  roulettegen.py  roulettestatistics.py  sieamplitudes.py  siediff.py  sieorig.py
CosmoSimPy/CosmoSim/: .gitignore  50.txt  Controller.py  Makefile  Parameters.py  View.py  __init__.py  sie05.txt  sis50.txt
Datasets/: .gitignore  README.md  cluster.csv  cluster.toml  dataset.toml  dataset2.toml  debug.csv  experimentbatch.toml  problem.toml  sersic.csv  sie.csv
Legacy/: MANIFEST.in  setup.py  vcpkg.json
Legacy/conan2profiles/: README
Legacy/github-workflow/: build-production.yml  trial-windows.yml
Python/: amplitudes.py  compare.py  datagen.py
Python/CosmoSim/: __init__.py
RegressionTest/: .gitignore  Makefile  chiconvert.py  cluster.csv  dataset.csv  makefile-template
RegressionTest/amplitudes/: .gitignore  Makefile  short.slurm  sie-short.slurm  sie-time.slurm  time.slurm
RegressionTest/cluster-raytrace/: local.config
RegressionTest/cluster-roulette/: local.config
RegressionTest/cluster-sampled-raytrace/: local.config
RegressionTest/cluster-sampled-roulette/: local.config
RegressionTest/debug2026june/: .gitignore  Makefile  dataset.csv  debug.csv
RegressionTest/exactpm/: debug.csv
RegressionTest/new-raytrace/: local.config
RegressionTest/new-roulette/: baseline.config  local.config
RegressionTest/old-sampled/: local.config  sampled.csv
RegressionTest/raytrace/: debug.csv  debug300.csv  local.config
RegressionTest/rotatedsis/: debug.csv
RegressionTest/roulette/: baseline.config  debug.csv
RegressionTest/roulettegen/: baseline.config  makeimages.sh
RegressionTest/roulettegen-old/: Makefile  makeimages.sh
RegressionTest/rouletteoutput/: .gitignore  Makefile  Test.md  baseline.config  baseline20260808.csv  baseline20260809.csv  baseline20260811.csv  baseline20260813.csv  local.config
RegressionTest/roulettepm/: debug.csv
RegressionTest/sampled-raytrace/: baseline.config  local.config
RegressionTest/sampled-roulette/: local.config
RegressionTest/sersic/: baseline.config  debug.csv
Scripts/: amplitudes.sh  currenttest.sh  test.sh
Setup/: README.md  build.sh  buildvenv.sh  cibuildwheel  cibuildwheel.sh  conan_win_profile.py  idun.sh  idunbuild.sh  testvenv.sh  venv.sh
Test/: README.md  cluster.csv  sie.csv  sis.csv
Test/Cluster/: clean.sh  cluster.sh  make.sh  make1.sh  reference.csv  reference1.csv  singleton.csv  singleton1.csv  tutti.sh
Test/SIE/: compare.sh  debug.sh  montageimages.sh  samplingtest.sh  sie.csv  sie.sh  sis.sh  test.csv  tutti.sh
Test/SIE-nonrecursive/: clean.sh  sie.sh
Test/SIE-sampling/: sie.csv
Test/SIEDebug/: .gitignore  Makefile
Test/SIS/: clean.sh  compare.sh  sis.csv  sis.sh  tutti.sh
Test/SIS-nonrecursive/: Makefile  clean.sh  sis.sh  tutti.sh
Test/TeX/: .gitignore  Makefile
Test/Tutti/: clean.sh  compare.sh  sis.sh
Test/constellation/: constellation.csv  make.sh
Test/pointmass/: pmtest.sh
Test/roulette/: Makefile  clean.sh  config.sh  dataset.csv  preamble.tex  sie.csv  sie.sh  sis.sh  test.sh
Test/roulettegen/: .gitignore  Makefile  debug.csv  test.sh
Test/roulettestatistics/: .gitignore  datasetgen.py  new.csv  raytrace.sh  report.tex  test.sh  tweak.py  tweak.sh  (+2 more)
buildscripts/: buildvenv.sh  venv.sh
conan2/: README  windows-profile
docker/: Dockerfile  README  build.sh  venv.sh
docker-sim/: README
docs/: Makefile  lensmodel.tex  software.tex
pypi-drafts/: pyproject.toml
python/: README.md  amplitudes.py  compare.py  datasetgen.py  libamplitudes.py  roulettestatistics.py
slurm/: sie.slurm
src/: CMakeLists-github.txt  CMakeLists.txt
src/CosmoSim/: AmplitudeManager.py  Arguments.py  Controller.py  CosmoSim.cpp  CosmoSim.h  Dictionary.py  Image.py  Lens.py  Makefile  Parameters.py  RouletteAmplitudes.py  Simulator.py  Sources.py  View.py  __init__.py  __main__.py  bindings.cpp  datagen.py  dataset.py  defaults.toml  pm08.txt  pm09sie.txt  pm20.txt  pm50.txt  roulettegen.py  roulettestatistics.py  sis50.txt
src/CosmoSim/CLI/: Arguments.py  Generators.py  Parser.py  Resim.py  SimImage.py  Simulator.py  __init__.py
src/CosmoSim/CosmoSimPy/: __init__.py
src/CosmoSim/GUI/: Controller.py  CosmoSim.py  View.py  Widgets.py  __main__.py
src/CosmoSim/Helper/: Parameters.py
src/CosmoSim/Roulettes/: Parser.py  __init__.md  __main__.py  libamplitudes.py  sie.py
src/cosmosimpy/: CosmoSim.cpp  CosmoSim.h  PyTest.cpp  RouletteSim.cpp  bindings.cpp
src/drafts/: LensWrapper.py
src/simlib/: Amplitudes.cpp  ClusterLens.cpp  EIS.cpp  EllipsoidSource.cpp  ImageSource.cpp  KormannSIE.cpp  Lens.cpp  LensMap.cpp  LensModel.cpp  OurSIE.cpp  PMCLens.cpp  PointMass.cpp  PointMassExact.cpp  PointMassLens.cpp  PointMassRoulette.cpp  PsiFunctionLens.cpp  RaytraceModel.cpp  RotatedModel.cpp  RouletteLens.cpp  RouletteModel.cpp  RoulettePMCLens.cpp  RoulettePMLens.cpp  RouletteRegenerator.cpp  SIE.cpp  SIS.cpp  SampledLens.cpp  SampledPsiFunctionLens.cpp  SampledRouletteLens.cpp  SampledSISLens.cpp  SimulatorModel.cpp  Source.cpp  SourceConstellation.cpp  SphereLens.cpp  SphericalSource.cpp  TriangleSource.cpp  sersic.h  simaux.cpp  simaux.h
src/simulator/: Simulator.cpp
tests/: roulettetest.cpp  testmask.cpp
(+25 files in other folders)
