[build-system]
requires = [
    "setuptools",
    "scikit-build>=0.17.3",
    "cmake>=3.23",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = [ "dependencies" ]
name = "CosmoSim"
version = "2.5.3rc3"
authors = [
  { name='Hans Georg Schaathun', email="georg+github@schaathun.net" },
]
description = 'Simulator of Gravitational Lenses'
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"
license-files = ["LICENSE"]
keywords=[ 'cosmology', 'gravitational lensing', "simulation" ]

[project.urls]
Homepage = "https://github.com/CosmoAI-AES/CosmoSim"
Issues = "https://github.com/CosmoAI-AES/CosmoSim/issues"

[tool.cibuildwheel.linux]
before-all = "yum -y install libva-devel libvdpau-devel xkeyboard-config-devel libfontenc-devel libXaw-devel libXcomposite-devel libXcursor-devel libXdmcp-devel libXtst-devel libXinerama-devel libxkbfile-devel libXrandr-devel libXres-devel libXScrnSaver-devel xcb-util-wm-devel xcb-util-image-devel xcb-util-keysyms-devel xcb-util-renderutil-devel libXdamage-devel libXxf86vm-devel libXv-devel xcb-util-devel libuuid-devel xcb-util-cursor-devel opencv-devel gmp-devel ; echo 'yum complete' ; uname -a"
environment = { CC="gcc", CXX="g++" }
