[build-system]
requires = [
    "conan>=2.0.0",
    "setuptools",
    "scikit-build>=0.17.3",
    "skbuild-conan",
    "cmake>=3.15",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "CosmoSim"
version = "2.5.3rc3"
authors = [
  { name='Hans Georg Schaathun', email="georg+github@schaathun.net" },
]
description = 'Simulator of Gravitational Lenses'
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"
license-files = ["LICENSE"]
keywords=[ 'cosmology', 'gravitational lensing', "simulation" ]
dependencies=["sympy>=1.13", "numpy", "matplotlib", "opencv-python", "pandas"]

[project.urls]
Homepage = "https://github.com/CosmoAI-AES/CosmoSim"
Issues = "https://github.com/CosmoAI-AES/CosmoSim/issues"

[tool.cibuildwhee]
build = [ "*-manylinux_x86_64", "*-manylinux_i686" ]

[tool.cibuildwheel.linux]
before-all = "yum -y install libva-devel libvdpau-devel xkeyboard-config-devel libfontenc-devel libXaw-devel libXcomposite-devel libXcursor-devel libXdmcp-devel libXtst-devel libXinerama-devel libxkbfile-devel libXrandr-devel libXres-devel libXScrnSaver-devel xcb-util-wm-devel xcb-util-image-devel xcb-util-keysyms-devel xcb-util-renderutil-devel libXdamage-devel libXxf86vm-devel libXv-devel xcb-util-devel libuuid-devel xcb-util-cursor-devel perl perl-IPC-Cmd perl-Digest-SHA && pipx install conan && conan profile detect --name skbuild_conan_py &&  echo 'CONAN START' && conan install --profile:all=skbuild_conan_py --requires=libcap/2.69 '--build=*' && conan install --profile:all=skbuild_conan_py --requires=libx264/cci.20240224 '--build=*' && conan install --profile:all=skbuild_conan_py --requires=openssl/3.5.1 '--build=*' && echo 'CONAN DONE' && uname -a"
environment = { CC="gcc", CXX="g++" }
manylinux-x86_64-image = "manylinux_2_34"
manylinux-i686-image = "manylinux_2_34"
